@@ -1,0 +1,6 @@
+#!/bin/sh
+
+rm -f debian/pycompat
+
+echo "Remove obsolete debian/pycompat file."
+echo "Fixed-Lintian-Tags: debian-pycompat-is-obsolete"
