@@ -1,0 +1,2 @@
+Remove obsolete debian/pycompat file.
+Fixed-Lintian-Tags: debian-pycompat-is-obsolete
