@@ -20,6 +20,7 @@ lintian-brush (0.14) UNRELEASED; urgency=medium
   * Support updating debhelper-compat version in packages that use the
     debhelper-compat relation in Build-Depends.
   * Add fixer for maintainer-script-without-set-e.
+  * Add fixer for debian-pycompat-is-obsolete.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 Feb 2019 15:11:25 +0000
 
